added emotion description interface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name=".MyAccount"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
-            android:name=".Signup"
+            android:name=".CreateAccount"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".Login"
