--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     implementation 'androidx.core:core:1.3.2'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:3.0.2"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
