--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.glacierapp"
+        applicationId "com.example.mMonitorApp"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'com.google.firebase:firebase-database:19.7.0'
+    testImplementation 'org.testng:testng:6.9.6'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestUtil 'androidx.test:orchestrator:1.3.0'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
